public/CSS/styles.css
/* ... */
.fontOrnaments {
  font-size: 3rem;
  font-family: 'nymphetteregular';
}

.drinkChoices {
  justify-content: center;
  align-content: center;
  padding: 0;
  margin: 0;
  border: 0;
  background-color: transparent;
}
#shotGlass{padding-top:30% };

.drinkButton {
  justify-content: center;
  align-content: center;
  border: none;
  padding: 0;
  margin: 0;
  text-decoration: none;
  background: inherit;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  cursor: pointer;
  text-align: inherit;
  transition: background 250ms ease-in-out,
    transform 150ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.drinkButton:hover,
.drinkButton:focus {
  /*at the moment when the mouse is over the drink and clicks
it is still classed as hovering until the mouse is moved offset
the button at which point the duration kicks in the drink rights itself
this is despite removiing pointer event in js. a solution would be putting
a new object on button press over the button and disapearing the buttonsso the
new instantiated image is same rotation but isnt same object. Or if there
was a way of liberating the image from its hierachy position absolute not work
because it is still absolute relative to the thing it is in not a 0,0 coordinate
*/
  transition-duration: 1s;
  transform: rotate(-15deg);
}

.drinkButton:focus {
  outline: none;
}

/*

/*disable other buttons, put image overtop of button same location and float bottom left
roll ball same time top left and bounce across the words and down
then fade in corner stuff and have drink appear under the drink icon and the icon disappear
same time bounce the ball up and move view up slightly and reveal tab as it get to last 10% of screen
do both halfs of this action in 1s each

is this a div issue?
    */
.drinkButton:active {}

.my-animation {
  position: absolute;
  /*really want to delete and replace with another image unless its possible to make it fly to the new cell and go in it*/
  animation: takeDrink 1s linear forwards;
}

@keyframes takeDrink {

  /*could just use transition*/
  /*if set its start position it will slide but how do i get position its already at
jquery
*/
  /*currently relative to self*/
  0% {
    right: 0vw;
    top: 0vh;
    /*may already be rotated so want to be able just to set it*/
    transform: rotate(0);
    opacity: 1;
  }

  60% {
    transform: rotate(0);
  }

  80% {
    transform: rotate(-15deg);
  }

  100% {
    right: 50vw;
    top: 40vh;
    Opacity: 0;
  }
}

.drinkImages {
  vertical-align: top;
  max-height: 60px;
  border: 0;
  padding: 0;
  margin: 0;
}

.colTight {
  padding: 0;
  margin: 0;
  border: 0;
}

/* I've tried to use pseudo and otherwise found issues with vh vw and pixel dont know why
is it 10px + short it is a proportion from somewhere
it is working! it is that the flick flicks to soon
   */
/*shape and shaoe flick not working now but did in the code pen*/
/*
.shape{
    background:radial-gradient(ellipse at 50%, purple 50%, plum);
 /*border colour a black with alpha*/
/*
  border-color:rgba(0, 0, 0, 0.75);
  border-style: solid;
  /*make bottom 10px again later just trying to se the gap*/
/*
  border-width: 10px 0px 10px 2px;
 border-bottom-color:red;
  height: 60vh;
  width: 60vw;
  border-radius: 60% 0% 60% 0%;
  display: flex;

  padding:0px 0px 0px 0px;
  margin:0px 0px 0px 40px;

}
*/
/*i want to extend the border left so trying to use a pseudo element
to make a lip to catch the ball
*/
/*
.shapeflick{
  position:absolute;
 /*if the flick reveals colour underneath when moving about could bake the ".shape" bottom border 0 and add margin 10px to top or padding or make the bottom colour transparent*/
/*border colour a black with alpha*/
/*margin ballencing out space lost from border*/
/*by having margin and padding can move into padded area*/
/*the curve will not be exact doing this so make it fat*/
/*could also shift it down a bit and put own background on*/
/*could also make it the bottom element*/
/*
  padding:0px 0px 0px 40px;
  margin:0px 0px 0px 0px;

  border-color:rgba(0, 0, 0, 1);
  border-style: solid;
  /*make 10 px later just need to see where it falls*/
/*
border-width: 10px 0px 10px 2px;
  border-color:transparent transparent black transparent;

  height: 60vh;
  width: 60vw;
  border-radius: 60% 10% 60% 7%;
  display: flex;

}
*/


/*so if i set their start position different can i apply the same code to move them instead of having their own*/
/*marbles set by 100px sio that they are next to each other with space for the rolling in marbles

*/

.marbleOnShape1{
  position:absolute;
  right:0px;
  top:-100px;
    z-index:3;

}


.marbleOnShape2{
  position:absolute;
  right:0px;
  top:-100px;
    z-index:3;

}


.marbleOnShape3{
    position:absolute;
    right:0px;
    top:-100px;
      z-index:3;

  }


  .marbleOnShape1{
    display:block;
    position:absolute;
    right:0px;
    top:-100px;
      z-index:3;
        width:0;
    height:0;
  }


  .marbleOnShape2{
      display:block;
    position:absolute;
    right:0px;
    top:-100px;
      z-index:3;
      width:0;
    height:0;
  }


  .marbleOnShape3{
      display:block;
      position:absolute;
      right:0px;
      top:-100px;
        z-index:3;
    width:0;
    height:0;
    }





.pg2InnerShape{
  display:block;
  height:100%;
  position:static;/*static?*/
z-index:4;
}





.bestCardsArea {

/*at large sizes of px or vh vw get border bottom difference in hieght between two objects
the two objects are exactly the same i think
*/
/*    !!!!!!!!!!!!!!!1     if dont want to be covered with the corner                !!!!!!!!!!!!!!!!!!!!!!!1  */
   width:80vw; /*calc(100% - 100px); */
 	height:80vh; /*calc(100% - 100px);*/ /*80ch*/ /*need 100 for top marble*/ /*200 height needed not to touch corner 100 top so marble not hidden by top, extra 100 so its symetrical*/
  /*
   position:absolute;
*/
  z-index: 1;
  display: flex;
  flex-direction: column;
  margin:auto; /* auto auto 200px;*/
}
/* ... */

